Gatsby: fix vaccination colour contrast

--- a/gatsby/src/components/content-box/content-box.module.scss
+++ b/gatsby/src/components/content-box/content-box.module.scss
@@ -37,7 +37,7 @@
   }
 
   &--green {
-    background: #1b9b2c;
+    background: #0b891c;
   }
 
   &--blue {
@@ -59,6 +59,6 @@
   }
 
   &--green {
-    color: #1b9b2c;
+    color: #0b891c;
   }
 }
